# gbllm

./: .gitignore  AGENTS.md  Cargo.toml  REVIEWERS.md  clippy.toml
gbf-abi/: Cargo.toml
gbf-abi/src/: checkpoint.rs  compute_shape.rs  continuation.rs  fault.rs  harness.rs  interrupt.rs  lib.rs  liveness.rs  shell.rs  trace.rs  version.rs
gbf-abi/tests/: property.rs
gbf-artifact/: Cargo.toml
gbf-artifact/src/: artifact.rs  aux.rs  bundle.rs  bundle_program_evaluator.rs  canonical_artifact_write.rs  canonical_bundle_write.rs  canonical_conformance_write.rs  canonical_gutenberg_manifest_write.rs  canonical_tensor.rs  conformance.rs  core.rs  export_facts.rs  frontier.rs  gutenberg_manifest.rs  hint_bundle.rs  ids.rs  interaction.rs  lexical.rs  lexical_spec.rs  lib.rs  lowerings.rs  manifest.rs  norm_plan.rs  opset_v1.rs  preferences.rs  quant.rs  reference_eval_graph.rs  semantic_checkpoint.rs  sequence.rs  shadow.rs  tensor.rs  tied_alias.rs  weight_plan.rs
gbf-artifact/tests/: artifact_canonical_s3.rs  artifact_logging_s3.rs  artifact_quant_coverage_s3.rs  artifact_self_hash_determinism_s3.rs  aux_round_trip.rs  bundle_canonical_s3.rs  bundle_eval_logging_s3.rs  bundle_mutation_order_s3.rs  bundle_opset_v1_coverage_s3.rs  bundle_program_evaluator_s3.rs  bundle_self_hash_determinism_s3.rs  bundle_topological_proptest_s3.rs  canonical_tensor_role_s3.rs  conformance_aggregation_kind_s3.rs  conformance_seed_arity_s3.rs  gutenberg_manifest_s4.rs  hint_bundle_round_trip.rs  lexical_constructors_s3.rs  lexical_logging_s3.rs  lexical_proptest_s3.rs  lexical_self_hash_determinism_s3.rs  lexical_spec_canonical_s3.rs  lowerings_round_trip.rs  manifest_round_trip.rs  policy_diagnostics_type_identity.rs  quant_spec_proptest_s3.rs  s5_frontier_recommendation.rs  semantic_checkpoint_proptest_s3.rs  shadow_emission_id_canonical.rs  tied_alias_round_trip_s3.rs
gbf-asm/: Cargo.toml
gbf-asm/examples/: tiny_rom.rs
gbf-asm/src/: builder.rs  cycle_model.rs  effect.rs  encoder.rs  isa.rs  layout.rs  lib.rs  listing.rs  lowering.rs  provenance.rs  relax.rs  rom.rs  section.rs  symbols.rs  test_support.rs
gbf-bench/: Cargo.toml
gbf-bench/src/: lib.rs  workload.rs
gbf-cli/: Cargo.toml
gbf-cli/src/: main.rs
gbf-cli/tests/: s1_cli.rs  s1_determinism_script.rs  s1_e2e_cli_script.rs  s1_isolation_script.rs  s2_cli_s2.rs  s3_cli_s3.rs  s4_cli_s4.rs
gbf-codegen/: Cargo.toml
gbf-codegen/src/: arena.rs  budget.rs  f_b1.rs  import.rs  lib.rs  lower_asm.rs  overlay_plan.rs  place.rs  policy.rs  reachability.rs  refinement_loop.rs  report.rs  rom.rs  schedule.rs  schedule_cost.rs  sram_page_plan.rs  stage_cache.rs  storage_plan_test_infra.rs  validate.rs  window.rs
gbf-codegen/tests/: chunk2_e2e.rs  coverage_matrix_f_b6_f_b7.rs  sram_page_plan_fixtures.rs
gbf-data/: Cargo.toml
gbf-data/examples/: s3_manifest_verify.rs
gbf-data/src/: corpus.rs  gutenberg.rs  lib.rs  tinystories_v2.rs
gbf-data/tests/: gutenberg_stripper.rs  tinystories_manifest.rs
gbf-debug/: Cargo.toml
gbf-debug/src/: cli.rs  lib.rs  script.rs  session.rs
gbf-debug/tests/: e2e.rs  session_wire.rs  skill_recipes.rs
gbf-emu/: Cargo.toml  build.rs
gbf-emu/examples/: load_tiny_rom.rs
gbf-emu/src/: adapter.rs  determinism.rs  harness.rs  lib.rs  primitives.rs  trace_ring.rs  trap.rs
gbf-emu/tests/: cross_module_conformance.rs  determinism_single_path.rs  fast_run.rs  gameroy_api_spike.rs  harness.rs  single_substrate_smoke.rs  snapshot_round_trip.rs  tiny_rom_boots.rs  trace_ring.rs  trap.rs
gbf-experiments/: Cargo.toml  build.rs
gbf-experiments/benches/: fisher_yates_22mib.rs
gbf-experiments/snapshots/: s1_linearstate_public_api.txt  s1_qat_public_api.txt  s3_artifact_public_api.txt  s3_oracle_public_api.txt  s3_workload_public_api.txt
gbf-experiments/src/: lib.rs
gbf-experiments/tests/: README.md  ablation.rs  api_drift_check_s2.rs  artifact_canonical_snapshot_s3.rs  artifact_decoder_argmax_s3.rs  artifact_deployable_bytes_s3.rs  artifact_determinism_s3.rs  artifact_export_logging_s3.rs  artifact_no_naming_resolution_s3.rs  artifact_oracle_s3_support.rs  artifact_quantspec_resolution_s3.rs  artifact_s3_support.rs  artifact_tied_embedding_s3.rs  baseline.rs  baseline_canonical_counts_write_s3.rs  baseline_compile_guard_s3.rs  baseline_fail_test_s3.rs  baseline_kn5_s3.rs  baseline_logging_s3.rs  baseline_proptest_s3.rs  baseline_self_hash_determinism_s3.rs  build_metadata.rs  buildkind_dispatch_s2.rs  bundle_canonical_json_metadata_s3.rs  bundle_canonical_snapshot_s3.rs  bundle_determinism_s3.rs  bundle_export_logging_s3.rs  bundle_export_visitor_hash_s3.rs  bundle_program_validation_s3.rs  bundle_s3_support.rs  bundle_tied_embedding_s3.rs  bundle_topological_serialization_s3.rs  canonical_json.rs  canonical_json_s2.rs  canonical_json_s3.rs  chapter_holdout_s3.rs  charset_drop_rate_s3.rs  charset_endoftext_s3.rs  charset_idempotence_s3.rs  charset_logging_s3.rs  (+176 more)
gbf-oracle/: Cargo.toml
gbf-oracle/src/: lib.rs  phase_surface_agreement.rs  scorers.rs
gbf-oracle/tests/: artifact_decoder_logging_s3.rs  artifact_fallback_s3.rs  artifact_logging_s3.rs  artifact_real_s3.rs  artifact_support.rs  denotational_fallback_s3.rs  denotational_logging_s3.rs  denotational_real_s3.rs  denotational_support.rs  observations_canonical_s3.rs
gbf-policy/: Cargo.toml
gbf-policy/examples/: dump_registries.rs
gbf-policy/src/: budget.rs  calibration.rs  canonical.rs  capabilities.rs  compile.rs  cost.rs  diagnostics.rs  emulator_harness.rs  lib.rs  long_range.rs  metrics.rs  model_profile.rs  objective.rs  observable_invariants.rs  probe.rs  re_validation.rs  repair.rs  risk.rs  s5.rs  shadow.rs  trace_event_layout.rs
gbf-policy/tests/: attention_oracle_contract.rs  attention_oracle_report_bindings.rs  calibration_round_trip.rs  encoded_rom_identity.rs  observable_invariants.rs  preflight_pf3.rs  re_validation.rs  s5_golden_fixture_corpus.rs
gbf-runtime/: Cargo.toml
gbf-runtime/examples/: banking_demo.rs  (+2 more)
gbf-test/: Cargo.toml
gbf-train/: Cargo.toml
gbf-verify/: Cargo.toml
gbf-workload/: Cargo.toml
(+1451 files in other folders)
