[workspace]
members = [
    "gbf-foundation",
    "gbf-hw",
    "gbf-artifact",
    "gbf-abi",
    "gbf-policy",
    "gbf-model",
    "gbf-train",
    "gbf-oracle",
    "gbf-verify",
    "gbf-test",
    "gbf-workload",
    "gbf-report",
    "gbf-kernel",
    "gbf-ir",
    "gbf-ir-schema",
    "gbf-asm",
    "gbf-runtime",
    "gbf-codegen",
    "gbf-emu",
    "gbf-data",
    "gbf-store",
    "gbf-bench",
    "gbf-migrate",
    "gbf-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["std"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149" }
sha2 = { version = "=0.10.9" }
tempfile = { version = "=3.27.0" }
toml = { version = "=1.1.2" }
tracing = { version = "=0.1.44" }
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt", "json"] }
