[workspace]
members = [
    "gbf-foundation",
    "gbf-hw",
    "gbf-artifact",
    "gbf-abi",
    "gbf-policy",
    "gbf-model",
    "gbf-train",
    "gbf-experiments",
    "gbf-oracle",
    "gbf-verify",
    "gbf-test",
    "gbf-workload",
    "gbf-report",
    "gbf-kernel",
    "gbf-ir",
    "gbf-ir-schema",
    "gbf-asm",
    "gbf-runtime",
    "gbf-codegen",
    "gbf-emu",
    "gbf-data",
    "gbf-store",
    "gbf-bench",
    "gbf-migrate",
    "gbf-cli",
    "gbf-debug",
    "gbf-meta-checks",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
assert_cmd = { version = "=2.2.1" }
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["std"] }
criterion = { version = "=0.8.2" }
gbf-artifact = { path = "gbf-artifact", version = "=0.1.0" }
gbf-data = { path = "gbf-data", version = "=0.1.0" }
gbf-foundation = { path = "gbf-foundation", version = "=0.1.0" }
gbf-model = { path = "gbf-model", version = "=0.1.0" }
gbf-oracle = { path = "gbf-oracle", version = "=0.1.0" }
gbf-policy = { path = "gbf-policy", version = "=0.1.0" }
gbf-train = { path = "gbf-train", version = "=0.1.0", default-features = false }
gbf-workload = { path = "gbf-workload", version = "=0.1.0" }
insta = { version = "=1.47.2" }
predicates = { version = "=3.1.4" }
pretty_assertions = { version = "=1.4.1" }
proptest = { version = "=1.11.0" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149" }
safetensors = { version = "=0.7.0" }
sha2 = { version = "=0.10.9" }
tempfile = { version = "=3.27.0" }
static_assertions = { version = "=1.1.0" }
toml = { version = "=1.1.2" }
tracing = { version = "=0.1.44" }
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt", "json"] }
tracing-test = { version = "=0.2.6" }
trybuild = { version = "=1.0.116" }
