[package]
name = "gbf-abi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["host"]
host = ["std", "alloc", "dep:gbf-foundation"]
std = ["serde/std"]
alloc = ["serde/alloc"]

[dependencies]
gbf-foundation = { path = "../gbf-foundation", optional = true }
memoffset = "0.9"
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json.workspace = true
