[package]
name = "gbf-artifact"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-foundation = { path = "../gbf-foundation" }
gbf-hw = { path = "../gbf-hw" }
gbf-policy = { path = "../gbf-policy" }
gbf-workload = { path = "../gbf-workload" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
