[package]
name = "gbf-artifact"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
s3-schemas = []

[dependencies]
gbf-foundation.workspace = true
gbf-hw = { path = "../gbf-hw" }
gbf-policy = { path = "../gbf-policy" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tracing-subscriber.workspace = true
