[package]
name = "gbf-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
gbf-codegen = { path = "../gbf-codegen" }
gbf-experiments = { path = "../gbf-experiments", default-features = false }
gbf-foundation = { path = "../gbf-foundation" }
gbf-policy = { path = "../gbf-policy" }
gbf-report = { path = "../gbf-report" }

[features]
default = ["phase-a"]
phase-a = ["gbf-experiments/phase-a"]
ablation = ["gbf-experiments/ablation"]
s2-full = ["gbf-experiments/s2-full"]
s2-ablation = ["gbf-experiments/s2-ablation"]
s3 = ["gbf-experiments/s3"]
s3-phase-d = ["gbf-experiments/s3-phase-d"]
s3-oracle-real = ["gbf-experiments/s3-oracle-real"]
s3-oracle-fallback = ["gbf-experiments/s3-oracle-fallback"]
s3-oracle-adversarial = ["gbf-experiments/s3-oracle-adversarial"]
s3-full = [
    "s3",
    "s3-phase-d",
    "s3-oracle-real",
]
s4 = ["gbf-experiments/s4"]
s4-full = ["s4", "gbf-experiments/s4-full"]
s4-falsify = ["s4", "gbf-experiments/s4-falsify"]
falsify = ["phase-a", "gbf-experiments/falsify"]

[dev-dependencies]
assert_cmd.workspace = true
bzip2.workspace = true
flate2.workspace = true
gbf-artifact = { path = "../gbf-artifact" }
predicates.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
zip.workspace = true
