[package]
name = "gbf-codegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-artifact = { path = "../gbf-artifact" }
gbf-asm = { path = "../gbf-asm" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-hw = { path = "../gbf-hw" }
gbf-ir = { path = "../gbf-ir" }
gbf-kernel = { path = "../gbf-kernel" }
gbf-policy = { path = "../gbf-policy" }
gbf-report = { path = "../gbf-report" }
gbf-runtime = { path = "../gbf-runtime" }
serde.workspace = true
serde_json.workspace = true
