[package]
name = "gbf-codegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-artifact = { path = "../gbf-artifact" }
gbf-asm = { path = "../gbf-asm" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-hw = { path = "../gbf-hw" }
gbf-ir = { path = "../gbf-ir" }
gbf-kernel = { path = "../gbf-kernel" }
gbf-policy = { path = "../gbf-policy" }
gbf-report = { path = "../gbf-report" }
gbf-runtime = { path = "../gbf-runtime" }
gbf-store = { path = "../gbf-store" }
gbf-workload = { path = "../gbf-workload" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
semantic_equivalence_check = []
stage-cache = []
test-infra = []

[dev-dependencies]
gbf-verify = { path = "../gbf-verify" }
proptest.workspace = true
tempfile.workspace = true
tracing-core = "=0.1.36"
