[package]
name = "gbf-data"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-artifact = { path = "../gbf-artifact" }
gbf-foundation = { path = "../gbf-foundation" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
unicode-normalization = "=0.1.25"

[dev-dependencies]
tempfile.workspace = true
