[package]
name = "gbf-experiments"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["phase-a"]
phase-a = ["gbf-train/qat", "gbf-train/burn-adapter"]
ablation = ["gbf-train/qat-ablation", "gbf-train/burn-adapter"]
s2-full = ["gbf-train/qat", "gbf-train/burn-adapter"]
s2-ablation = ["gbf-train/qat-ablation", "gbf-train/burn-adapter"]
falsify = ["s2-full", "gbf-policy/falsify"]

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
gbf-artifact.workspace = true
gbf-data.workspace = true
gbf-foundation.workspace = true
gbf-model.workspace = true
gbf-policy.workspace = true
gbf-train = { workspace = true, default-features = false }
burn.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
insta.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
trybuild.workspace = true

[[bench]]
name = "fisher_yates_22mib"
harness = false
