[package]
name = "gbf-experiments"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["phase-a"]
phase-a = ["gbf-train/qat", "gbf-train/burn-adapter"]
ablation = ["gbf-train/qat-ablation", "gbf-train/burn-adapter"]
qat-ablation = ["gbf-train/qat-ablation"]
s2-full = ["gbf-train/qat", "gbf-train/burn-adapter"]
s2-ablation = ["gbf-train/qat-ablation", "gbf-train/burn-adapter"]
s3 = ["gbf-artifact/s3-schemas", "gbf-workload/s3-schemas"]
s3-phase-d = ["gbf-train/qat", "gbf-train/burn-adapter"]
s3-oracle-real = ["gbf-oracle/s3-real"]
s3-oracle-fallback = ["gbf-oracle/s3-fallback"]
s3-oracle-adversarial = ["gbf-oracle/s3-oracle-adversarial"]
s4 = ["s3", "gbf-artifact/s4-schemas"]
s4-full = ["s4", "gbf-train/qat", "gbf-train/burn-adapter"]
s4-falsify = ["s4", "gbf-policy/falsify"]
qat = ["gbf-train/qat"]
burn-adapter = ["gbf-train/burn-adapter"]
s5-default = ["gbf-train/s5-default"]
s5-no-log = ["gbf-train/s5-no-log"]
s5-oracle-cross-build = []
s5-falsify-1 = ["s5-default"]
s5-falsify-2 = ["s5-default"]
s5-falsify-3 = ["s5-default"]
s5-falsify-4 = ["s5-default"]
s5-falsify-5 = ["s5-default"]
s5-falsify-6 = ["s5-default"]
s5-falsify-7 = ["s5-default"]
s5-falsify-8 = ["s5-default"]
s5-falsify-9 = ["s5-default"]
s5-falsify-10 = ["s5-default"]
s5-falsify-11 = ["s5-default"]
s5-falsify-12 = ["s5-default"]
s5-falsify-13 = ["s5-default"]
s5-falsify-14 = ["s5-default"]
s5-falsify-15 = ["s5-default"]
falsify = [
    "s2-full",
    "s3",
    "s3-oracle-adversarial",
    "s4-falsify",
    "gbf-policy/falsify",
]

[dependencies]
bzip2.workspace = true
clap = { version = "=4.6.1", features = ["derive"] }
flate2.workspace = true
gbf-artifact.workspace = true
gbf-data.workspace = true
gbf-foundation.workspace = true
gbf-model.workspace = true
gbf-oracle.workspace = true
gbf-policy.workspace = true
gbf-train = { workspace = true, default-features = false }
gbf-workload.workspace = true
burn.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
url.workspace = true
xml-rs.workspace = true
zip.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
insta.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
trybuild.workspace = true

[[bench]]
name = "fisher_yates_22mib"
harness = false

[[bin]]
name = "s5_falsification_loop"
path = "src/bin/s5_falsification_loop.rs"
