[package]
name = "gbf-oracle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-artifact = { path = "../gbf-artifact" }
gbf-foundation = { path = "../gbf-foundation" }
serde.workspace = true
serde_json.workspace = true
