[package]
name = "gbf-oracle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
s3-real = []
s3-fallback = []
s3-oracle-adversarial = []

[dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-artifact.workspace = true
gbf-foundation.workspace = true
gbf-workload.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
