[package]
name = "gbf-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-asm = { path = "../gbf-asm" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-hw = { path = "../gbf-hw" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
static_assertions.workspace = true
tracing.workspace = true

[dev-dependencies]
gbf-emu = { path = "../gbf-emu" }
