[package]
name = "gbf-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-artifact = { path = "../gbf-artifact" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-model = { path = "../gbf-model" }
gbf-oracle = { path = "../gbf-oracle" }
gbf-train = { path = "../gbf-train", features = ["burn-adapter"] }
gbf-verify = { path = "../gbf-verify" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-asm = { path = "../gbf-asm" }
gbf-debug = { path = "../gbf-debug" }
gbf-runtime = { path = "../gbf-runtime" }
sha2.workspace = true
