[package]
name = "gbf-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-artifact = { path = "../gbf-artifact" }
gbf-bench = { path = "../gbf-bench" }
gbf-codegen = { path = "../gbf-codegen" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-model = { path = "../gbf-model" }
gbf-oracle = { path = "../gbf-oracle" }
gbf-policy = { path = "../gbf-policy" }
gbf-report = { path = "../gbf-report" }
gbf-train = { path = "../gbf-train", features = ["burn-adapter"] }
gbf-verify = { path = "../gbf-verify" }
gbf-workload = { path = "../gbf-workload" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-asm = { path = "../gbf-asm" }
gbf-debug = { path = "../gbf-debug" }
gbf-runtime = { path = "../gbf-runtime" }
