[package]
name = "gbf-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["qat"]
qat = ["gbf-train/qat", "gbf-train/burn-adapter"]
qat-ablation = ["gbf-train/qat-ablation", "gbf-train/burn-adapter"]

[dependencies]
gbf-artifact = { path = "../gbf-artifact" }
gbf-bench = { path = "../gbf-bench" }
gbf-codegen = { path = "../gbf-codegen" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-hw = { path = "../gbf-hw" }
gbf-model = { path = "../gbf-model" }
gbf-oracle = { path = "../gbf-oracle" }
gbf-policy = { path = "../gbf-policy" }
gbf-report = { path = "../gbf-report" }
gbf-train = { workspace = true, default-features = false }
gbf-verify = { path = "../gbf-verify" }
gbf-workload = { path = "../gbf-workload" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-asm = { path = "../gbf-asm" }
gbf-debug = { path = "../gbf-debug" }
gbf-runtime = { path = "../gbf-runtime" }
