[package]
name = "gbf-train"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
burn-adapter = ["dep:burn", "burn/autodiff", "burn/ndarray"]
qat = []
qat-ablation = []
s5-default = []
s5-no-log = []

[dependencies]
burn = { workspace = true, optional = true }
gbf-artifact = { path = "../gbf-artifact" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-hw = { path = "../gbf-hw" }
gbf-model = { path = "../gbf-model" }
gbf-policy = { path = "../gbf-policy" }
gbf-workload = { path = "../gbf-workload" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
