[package]
name = "gbf-verify"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-abi = { path = "../gbf-abi" }
gbf-artifact = { path = "../gbf-artifact" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-policy = { path = "../gbf-policy" }
gbf-report = { path = "../gbf-report" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
