[package]
name = "gbf-workload"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gbf-artifact = { path = "../gbf-artifact" }
gbf-foundation = { path = "../gbf-foundation" }
gbf-policy = { path = "../gbf-policy" }
serde.workspace = true
serde_json.workspace = true
