[package]
name = "gbf-workload"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
s3-schemas = []

[dependencies]
gbf-artifact.workspace = true
gbf-foundation.workspace = true
gbf-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tracing-subscriber.workspace = true
